--- a/src/flask_tutorial/templates/base.html
+++ b/src/flask_tutorial/templates/base.html
@@ -4,7 +4,7 @@
     {% if title %}
     <title>{{ title }} - Microblog</title>
     {% else %}
-    <title>Welcme to Microblog!</title>
+    <title>Welcome to Microblog!</title>
     {% endif %}
   </head>
   <body>
@@ -14,6 +14,7 @@
       {% if current_user.is_anonymous %}
       <a href="{{ url_for("login")}}">Login</a>
       {% else %}
+      <a href="{{ url_for("user", username=current_user.username) }}">Profile</a>
       <a href="{{ url_for("logout")}}">Logout</a>
       {% endif %}
     </div>
