--- a/src/flask_tutorial/templates/base.html
+++ b/src/flask_tutorial/templates/base.html
@@ -1,34 +1,58 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     {% if title %}
     <title>{{ title }} - Microblog</title>
     {% else %}
     <title>Welcome to Microblog!</title>
     {% endif %}
+    <link href="{{ url_for('static', filename='vendored/bootstrap.min.css') }}" rel="stylesheet" />
   </head>
   <body>
-    <div>
-      Microblog: 
-      <a href="{{ url_for('index')}}">Home</a>
-      <a href="{{ url_for('explore')}}">Explore</a>
-      {% if current_user.is_anonymous %}
-      <a href="{{ url_for('login')}}">Login</a>
-      {% else %}
-      <a href="{{ url_for('user', username=current_user.username) }}">Profile</a>
-      <a href="{{ url_for('logout')}}">Logout</a>
-      {% endif %}
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container">
+        <a class="navbar-brand" href="{{ url_for('index') }}">Microblog</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="{{ url_for('index') }}">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="{{ url_for('explore') }}">Explore</a>
+            </li>
+          </ul>
+          <ul class="navbar-nav mb-2 mb-lg-0">
+            {% if current_user.is_anonymous %}
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="{{ url_for('login') }}">Login</a>
+            </li>
+            {% else %}
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="{{ url_for('user', username=current_user.username) }}">Profile</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="{{ url_for('logout') }}">Logout</a>
+            </li>
+            {% endif %}
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="container mt-3">
+      {% with messages = get_flashed_messages() %} 
+      {% if messages %}
+        {% for message in messages %}
+        <div class="alert alert-info" role="alert">{{ message }}</div>
+        {% endfor %}
+      {% endif %} 
+      {% endwith %} 
+      {% block content %}{% endblock %}
     </div>
-    <hr>
-    {% with messages = get_flashed_messages() %}
-    {% if messages %}
-    <ul>
-      {% for message in messages %}
-      <li>{{ message }}</li>
-      {% endfor %}
-    </ul>
-    {% endif %}
-    {% endwith %}
-    {% block content %}{% endblock %}
+    <script src="{{ url_for('static', filename='vendored/bootstrap.bundle.min.js') }}"></script>
   </body>
 </html>
