--- a/src/flask_tutorial/templates/base.html
+++ b/src/flask_tutorial/templates/base.html
@@ -9,6 +9,7 @@
     <title>Welcome to Microblog!</title>
     {% endif %}
     <link href="{{ url_for('static', filename='vendored/bootstrap.min.css') }}" rel="stylesheet" />
+    <script src="{{ url_for('static', filename='cosmetic_enhancements.js') }}"></script>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
