Chapter 12 - full implementation

--- a/src/flask_tutorial/templates/user.html
+++ b/src/flask_tutorial/templates/user.html
@@ -10,7 +10,12 @@
           <p>{{ user.about_me }}</p>
         {% endif %}
         {% if user.last_seen%}
-          <p>Last seen on: <span class="date">{{ user.last_seen }}</span></p>
+          <p>Last seen on: 
+            <span 
+              class="date-local"
+              data-date="{{ user.last_seen }}"
+            >{{ user.last_seen }}</span>
+          </p>
         {% endif %}
         <p>{{ user.followers_count() }} followers, {{ user.following_count() }} following.</p>
         {% if user == current_user %}
