--- a/src/flask_tutorial/templates/_post.html
+++ b/src/flask_tutorial/templates/_post.html
@@ -9,7 +9,13 @@
       <a href="{{ url_for('user', username=post.author.username) }}"
         >{{ post.author.username }}</a
       >
-      says: <br />{{ post.body }}
+      said
+      <span 
+        class="date-relative"
+        data-date="{{ post.timestamp }}"
+        title="{{ post.timestamp }}"
+      >[i]</span
+      >:<br />{{ post.body }}
     </td>
   </tr>
 </table>
